--- a/c_i3status/config
+++ b/c_i3status/config
@@ -1,5 +1,4 @@
-# i3status configuration file.
-# see "man i3status" for documentation.
+# i3status configuration file
 
 # It is important that this file is edited as UTF-8.
 # The following line should contain a sharp s:
@@ -14,26 +13,23 @@ general {
     interval = 5
 }
 
-#order += "ipv6"
 order += "volume master"
-order += "cpu_usage"
+order += "ethernet eth0"
+order += "wireless wlan0"
 order += "disk /"
 order += "disk /home"
-#order += "run_watch VPN"
-order += "wireless wlan0"
-#order += "ethernet eth0"
+order += "cpu_usage"
 order += "battery 1"
-order += "tztime local"
+order += "time"
 
 wireless wlan0 {
-    format_up = "W: %essid-%quality, %ip"
-    format_down = "W: down"
+    format_up = "%essid-%quality %ip"
+    format_down = "!W"
 }
 
 ethernet eth0 {
-    # if you use %speed, i3status requires root privileges
-    format_up = "E: %ip (%speed)"
-    format_down = "E: down"
+    format_up = "%ip"
+    format_down = "!E"
 }
 
 battery 1 {
@@ -43,11 +39,7 @@ battery 1 {
     threshold_type = time
 }
 
-run_watch VPN {
-    pidfile = "/var/run/vpnc/pid"
-}
-
-tztime local {
+time {
     format = "%H:%M %d/%m/%Y"
 }
 
@@ -67,5 +59,4 @@ volume master {
     format = "♪: %volume"
     device = "default"
     mixer = "Master"
-    #mixer_idx = 0
 }
