i3: revert "change position of the status bar"
Move status bar back to the top.
This reverts commit a507324b541bf2d345d7bb8ce79ec63950585d9d.

--- a/c_i3/config
+++ b/c_i3/config
@@ -168,7 +168,7 @@ bindsym $mod+q mode "$mode_system"
 # finds out, if available)
 bar {
     status_command i3status
-    #position top
+    position top
     #mode hide
 }
 
