--- a/tmux.conf
+++ b/tmux.conf
@@ -21,16 +21,17 @@ bind-key - split-window -v
 
 #set-option -g status-left
 set-option -g status-left-length 0
-set-option -g status-right "#[bg=colour10,fg=green] #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow] %Y-%m-%d %H:%M "
-set-option -g status-right-length 34
+set-option -g status-right "#[bg=colour10,fg=green] #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow] %Y-%m-%d %H:%M"
+set-option -g status-right-length 33
 set-option -g status-bg colour10
 set-option -g status-fg default
 set-option -g status-interval 1
 
-set-window-option -g window-status-format " #I #W "
-set-window-option -g window-status-current-bg colour10
+set-window-option -g window-status-bg colour10
+set-window-option -g window-status-format "#I #W"
+set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-fg red
 set-window-option -g window-status-current-format " #I #F "
-set-window-option -g window-status-bg black
 
 # vim: ft=conf:
