--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,7 @@
 	ignore = untracked
 	path = c_liquidprompt
 	url = git@github.com:pkkolos/liquidprompt.git
+[submodule "urxvt-scripts"]
+	ignore = untracked
+	path = urxvt/ext
+	url = git@github.com:pkkolos/urxvt-scripts.git
