--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
 .*
-c_conky/mails.sh
-moc/cache
-moc/equalizer
-moc/last_directory
-moc/pid
-moc/playlist.m3u
-moc/socket2
-moc/softmixer
+config_conky/mails.sh
 vim/bundle
 vim/tmp
