tmux: enable mouse scrolling

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@ set-option -g default-terminal "screen-256color"
 set-option -g history-limit 4096
 set-option -g base-index 1
 set-option -g set-titles on
+set-option -g mode-mouse on
 
 # set prefix key to ctrl+a
 unbind-key C-b
