--- a/config_i3/config
+++ b/config_i3/config
@@ -153,6 +153,7 @@ bindsym $mod+q mode "$mode_system"
 
 # Start i3bar to display a workspace bar plus the system information i3status
 bar {
+    font pango:DejaVu Sans Mono, FontAwesome 9
     colors {
         background         #111111
         statusline         #f2f2f2
