--- a/config_i3status/config
+++ b/config_i3status/config
@@ -23,24 +23,25 @@ order += "battery 1"
 order += "time"
 
 wireless wlan0 {
-    format_up = "%essid-%quality %ip"
-    format_down = "!W"
+    format_up = " %bitrate(%quality)  %essid"
+    format_down = ""
 }
 
 ethernet eth0 {
-    format_up = "%ip"
-    format_down = "!E"
+    format_up = " %ip"
+    format_down = ""
 }
 
 battery 1 {
     integer_battery_capacity = true
-    format = "%status %percentage %remaining"
+    format = " %percentage %remaining"
+    format_down = ""
     low_threshold = 30
     threshold_type = time
 }
 
 time {
-    format = "%H:%M %d/%m/%Y"
+    format = " %Y-%m-%d %H:%M"
 }
 
 cpu_usage {
@@ -66,7 +67,8 @@ disk "/home" {
 }
 
 volume master {
-    format = "♪: %volume"
+    format = " %volume"
+    format_muted = ""
     device = "default"
     mixer = "Master"
 }
