i3: change colour theme

--- a/config_i3/config
+++ b/config_i3/config
@@ -4,14 +4,16 @@
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 #font pango:DejaVu Sans Mono 10
 
-# colours for windows
-client.focused          #c44231 #c44231 #f2f2f2 #268bd2
-client.focused_inactive #515151 #515151 #f2f2f2 #363636
-client.unfocused        #222222 #222222 #888888 #101010
-client.urgent           #268bd2 #268bd2 #f2f2f2 #c44231
-
 # define modification key
 set $mod Mod4
+
+set $red    #991111
+set $blue   #162e42
+set $grey   #424242
+set $lgrey  #888888
+set $dgrey  #222222
+set $white  #d8dce1
+set $black  #111111
 
 set $ws1   "1:"
 set $ws2   "2:"
@@ -23,6 +25,13 @@ set $ws7   "7:"
 set $ws8   "8:"
 set $ws9   "9:"
 set $ws10  "10:"
+
+#                        BORDER  BACKGROUND  TEXT    INDICATOR
+client.focused           $blue   $blue       $white  $lgrey
+client.focused_inactive  $grey   $grey       $white  $grey
+client.unfocused         $dgrey  $dgrey      $grey   $dgrey
+client.urgent            $red    $red        $white  $red
+# client.background                $blue
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -166,13 +175,13 @@ bindsym $mod+q mode "$mode_system"
 bar {
     font pango:DejaVu Sans Mono, FontAwesome 9
     colors {
-        background         #111111
-        statusline         #f2f2f2
-        separator          #393939
-        focused_workspace  #c44231 #c44231 #f2f2f2
-        active_workspace   #515151 #515151 #f2f2f2
-        inactive_workspace #222222 #222222 #595959
-        urgent_workspace   #268bd2 #268bd2 #f2f2f2
+        background          $black
+        statusline          $white
+        separator           $grey
+        focused_workspace   $blue   $blue   $white
+        active_workspace    $grey   $grey   $white
+        inactive_workspace  $dgrey  $dgrey  $grey
+        urgent_workspace    $red    $red    $white
     }
     position top
     strip_workspace_numbers yes
