--- a/config_i3/config
+++ b/config_i3/config
@@ -43,8 +43,8 @@ bindsym $mod+Return exec xterm
 bindsym $mod+Shift+q kill
 
 # start dmenu
-bindsym $mod+d exec dmenu_run
-#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec dmenu_run -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'
+bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'"
 
 bindsym $mod+l exec --no-startup-id i3lock -n -d -c 000000
 
