--- a/config_i3/config
+++ b/config_i3/config
@@ -165,10 +165,10 @@ set $mode_system System (l) logout, (s) suspend, (h) hibernate, (r) reboot, (p) 
 mode "$mode_system" {
     #bindsym l exec --no-startup-id i3lock -n -d -c 000000, mode "default"
     bindsym l exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id i3lock -c 000000 && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id i3lock -c 000000 && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot
-    bindsym p exec --no-startup-id systemctl poweroff
+    bindsym s exec --no-startup-id systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id systemctl hibernate, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym p exec --no-startup-id systemctl poweroff, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
