--- a/config_i3/config
+++ b/config_i3/config
@@ -177,6 +177,11 @@ mode "$mode_system" {
 
 bindsym $mod+q mode "$mode_system"
 
+assign [class="(?i)iceweasel"] $ws5
+assign [instance="(?i)ranger"] $ws6
+assign [class="(?i)nautilus"]  $ws6
+assign [class="(?i)mpv"]       $ws7
+
 # Start i3bar to display a workspace bar plus the system information i3status
 bar {
     font pango:DejaVu Sans Mono, FontAwesome 9
