--- a/config_i3/config
+++ b/config_i3/config
@@ -99,7 +99,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-bindsym $mod+z focus child
+bindsym $mod+Shift+a focus child
 
 bindsym $mod+b border normal 2
 bindsym $mod+Shift+b border pixel 2
