--- a/config_i3/config
+++ b/config_i3/config
@@ -1,5 +1,3 @@
-# i3 config file (v4)
-
 # define modification key
 set $mod Mod4
 
@@ -36,75 +34,49 @@ client.urgent            $red    $red        $white  $red
 new_window pixel 2
 new_float normal 2
 
-# use Mouse+Mod1 to drag floating windows to their wanted position
+# modifier for dragging floating windows
 floating_modifier Mod1
 
-# start a terminal
-bindsym $mod+Return exec xterm
-
-# kill focused window
-bindsym $mod+Shift+q kill
-
-# start dmenu
-bindsym $mod+d exec dmenu_run -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'
-bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'"
-
-bindsym $mod+l exec --no-startup-id i3lock -n -d -c 000000
-
-# change focus
-#bindsym $mod+j focus left
-#bindsym $mod+k focus down
-#bindsym $mod+l focus up
-#bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
+# wm bindings
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
-#bindsym $mod+Shift+j move left
-#bindsym $mod+Shift+k move down
-#bindsym $mod+Shift+l move up
-#bindsym $mod+Shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-bindsym $mod+h split h
+mode "resize" {
+    bindsym Left        resize shrink width 10 px or 10 ppt
+    bindsym Down        resize grow height 10 px or 10 ppt
+    bindsym Up          resize shrink height 10 px or 10 ppt
+    bindsym Right       resize grow width 10 px or 10 ppt
 
-# split in vertical orientation
-bindsym $mod+v split v
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+r mode "resize"
 
-# enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-bindsym $mod+Shift+a focus child
 
 bindsym $mod+b border normal 2
 bindsym $mod+Shift+b border pixel 2
 
-# switch to workspace
+bindsym $mod+space focus mode_toggle
+bindsym $mod+Shift+space floating toggle
+
+bindsym $mod+h split h
+bindsym $mod+v split v
+
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
+
+bindsym $mod+a focus parent
+bindsym $mod+Shift+a focus child
+
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace $ws3
@@ -116,7 +88,6 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
-# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3
@@ -128,40 +99,15 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-# reload the configuration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-    # These bindings trigger as soon as you enter the resize mode
+bindsym $mod+Shift+q kill
 
-    # Pressing left will shrink the window's width.
-    # Pressing right will grow the window's width.
-    # Pressing up will shrink the window's height.
-    # Pressing down will grow the window's height.
-    #bindsym j           resize shrink width 10 px or 10 ppt
-    #bindsym k           resize grow height 10 px or 10 ppt
-    #bindsym l           resize shrink height 10 px or 10 ppt
-    #bindsym semicolon   resize grow width 10 px or 10 ppt
-
-    # same bindings, but for the arrow keys
-    bindsym Left        resize shrink width 10 px or 10 ppt
-    bindsym Down        resize grow height 10 px or 10 ppt
-    bindsym Up          resize shrink height 10 px or 10 ppt
-    bindsym Right       resize grow width 10 px or 10 ppt
-
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
+bindsym $mod+l exec --no-startup-id i3lock -n -d -c 000000
 
 #set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (p) poweroff
 set $mode_system System (l) logout, (s) suspend, (h) hibernate, (r) reboot, (p) poweroff
-
 mode "$mode_system" {
     #bindsym l exec --no-startup-id i3lock -n -d -c 000000, mode "default"
     bindsym l exec --no-startup-id i3-msg exit, mode "default"
@@ -170,19 +116,21 @@ mode "$mode_system" {
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym p exec --no-startup-id systemctl poweroff, mode "default"
 
-    # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-
 bindsym $mod+q mode "$mode_system"
+
+# app bindings
+bindsym $mod+Return exec xterm
+bindsym $mod+d exec dmenu_run -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'
+bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'"
 
 assign [class="(?i)iceweasel"] $ws5
 assign [instance="(?i)ranger"] $ws6
 assign [class="(?i)nautilus"]  $ws6
 assign [class="(?i)mpv"]       $ws7
 
-# Start i3bar to display a workspace bar plus the system information i3status
 bar {
     font pango:DejaVu Sans Mono, FontAwesome 9
     colors {
