--- a/config_i3/config
+++ b/config_i3/config
@@ -57,7 +57,7 @@ mode "resize" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym $mod+r mode "resize"
+bindsym $mod+Shift+r mode "resize"
 
 bindsym $mod+f fullscreen
 
@@ -99,10 +99,17 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
+set $mode_config Config: (c) reload config file, (r) restart i3
+mode "$mode_config" {
+    bindsym c reload, mode "default"
+    bindsym r restart, mode "default"
 
-bindsym $mod+Shift+q kill
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+Shift+c mode "$mode_config"
+
+bindsym $mod+Shift+x kill
 
 bindsym $mod+l exec --no-startup-id i3lock -n -d -c 000000
 
@@ -119,7 +126,7 @@ mode "$mode_system" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-bindsym $mod+q mode "$mode_system"
+bindsym $mod+Shift+q mode "$mode_system"
 
 # app bindings
 bindsym $mod+Return exec xterm
