--- a/config_i3/config
+++ b/config_i3/config
@@ -132,6 +132,9 @@ bindsym $mod+Shift+q mode "$mode_system"
 bindsym $mod+Return exec xterm
 bindsym $mod+d exec dmenu_run -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'
 bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'"
+bindsym $mod+r exec urxvt -name ranger -e ranger
+
+exec urxvt -name ranger -e ranger
 
 assign [class="(?i)iceweasel"] $ws5
 assign [instance="(?i)ranger"] $ws6
