--- a/mpd.conf
+++ b/mpd.conf
@@ -113,7 +113,7 @@ restore_paused     "yes"
 # This setting defines a list of tag types that will be extracted during the
 # audio file discovery process. The complete list of possible values can be
 # found in the mpd.conf man page.
-metadata_to_use    "artist,album,title,track,disc,date,genre,comment
+metadata_to_use    "artist,album,title,track,disc,date,genre,comment"
 #
 # This setting enables automatic update of MPD's database when files in
 # music_directory are changed.
