mpd: minor change to have stereo visualisation in ncmpcpp

--- a/mpd.conf
+++ b/mpd.conf
@@ -254,8 +254,9 @@ audio_output {
 #
 audio_output {
     type    "fifo"
-    name    "Visualization"
+    name    "Visualisation"
     path    "/tmp/mpd.fifo"
+    format  "44100:16:2"
 }
 #
 # If MPD has been compiled with libsamplerate support, this setting specifies
