tmux: 256-colour profile not really used

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-terminal "screen-256color"
+#set-option -g default-terminal "screen-256color"
 set-option -g history-limit 4096
 set-option -g base-index 1
 set-option -g set-titles on
@@ -20,15 +20,15 @@ unbind-key '"'
 bind-key | split-window -h
 bind-key - split-window -v
 
-#set-option -g status-left
+# status format
 set-option -g status-left-length 0
-set-option -g status-right "#[bg=colour10,fg=green] #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow] %Y-%m-%d %H:%M"
+set-option -g status-right "#[bg=brightgreen,fg=green] #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow] %Y-%m-%d %H:%M"
 set-option -g status-right-length 33
-set-option -g status-bg colour10
+set-option -g status-bg brightgreen
 set-option -g status-fg default
 set-option -g status-interval 1
 
-set-window-option -g window-status-bg colour10
+set-window-option -g window-status-bg brightgreen
 set-window-option -g window-status-format "#I #W"
 set-window-option -g window-status-current-attr bold
 set-window-option -g window-status-current-bg black
