--- a/tmux.conf
+++ b/tmux.conf
@@ -21,18 +21,16 @@ bind-key | split-window -h
 bind-key - split-window -v
 
 # status format
-set-option -g status-left-length 0
-set-option -g status-right "#[bg=brightgreen,fg=green] #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow] %Y-%m-%d %H:%M"
-set-option -g status-right-length 33
-set-option -g status-bg brightgreen
-set-option -g status-fg default
 set-option -g status-interval 1
+set-option -g status-style bg=brightgreen,fg=default
+set-option -g status-left-length 0
+set-option -g status-right " #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow]%Y-%m-%d %H:%M"
+set-option -g status-right-length 33
+set-option -g status-right-style bg=brightgreen,fg=green
 
-set-window-option -g window-status-bg brightgreen
 set-window-option -g window-status-format "#I #W"
-set-window-option -g window-status-current-attr bold
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg red
+set-window-option -g window-status-style bg=brightgreen
 set-window-option -g window-status-current-format " #I #F "
+set-window-option -g window-status-current-style bg=black,fg=red,bold
 
 # vim: ft=conf:
