--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 set-option -g history-limit 4096
 set-option -g base-index 1
 set-option -g set-titles on
-set-option -g mode-mouse on
+set-window-option -g mode-mouse copy-mode
 
 # set prefix key to ctrl+a
 unbind-key C-b
