tmux: fix window title

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 set-option -g history-limit 4096
 set-option -g base-index 1
 set-option -g set-titles on
+set-option -g set-titles-string "#W"
 set-window-option -g mode-mouse copy-mode
 
 # set prefix key to ctrl+a
