--- a/mpd.conf
+++ b/mpd.conf
@@ -278,7 +278,7 @@ audio_output {
 # See <http://www.replaygain.org> for more details about ReplayGain.
 # This setting is off by default.
 #
-# replaygain           "album"
+replaygain           "auto"
 #
 # This setting sets the pre-amp used for files that have ReplayGain tags. By
 # default this setting is disabled.
@@ -297,7 +297,7 @@ audio_output {
 # above its original level. If replaygain_limit is disabled such amplification
 # might occur. By default this setting is enabled.
 #
-# replaygain_limit     "yes"
+replaygain_limit     "no"
 #
 # This setting enables on-the-fly normalization volume adjustment. This will
 # result in the volume of all playing audio to be adjusted so the output has
