conky: config file now uses lua syntax & new user location

--- a/conky.conf
+++ b/conky.conf
@@ -1,44 +1,45 @@
-background no
-update_interval 1
-update_interval_on_battery 5
-double_buffer yes
-no_buffers yes
-total_run_times 0
+conky.config = {
+	background = false,
+	update_interval = 1,
+	update_interval_on_battery = 5,
+	double_buffer = true,
+	no_buffers = true,
+	total_run_times = 0,
 
-own_window yes
-own_window_type desktop
-own_window_colour ffffff
-own_window_title conky
-minimum_size 300
-maximum_width 300
+	own_window = true,
+	own_window_type = 'desktop',
+	own_window_colour = '#ffffff',
+	own_window_title = 'conky',
+	minimum_width = 300,
+	maximum_width = 300,
 
-alignment tl
-gap_x 16
-gap_y 44
+	alignment = 'top_left',
+	gap_x = 16,
+	gap_y = 44,
 
-border_inner_margin 15
+	border_inner_margin = 15,
 
-draw_shades no
-draw_graph_borders no
+	draw_shades = false,
+	draw_graph_borders = false,
 
-use_xft yes
-xftalpha 0.0
-xftfont Droid Sans:size=10
+	use_xft = true,
+	font = 'Droid Sans:size=10',
 
-default_color 111111
+	default_color = '#111111',
 
-#blue
-color1 0099cc
-#green
-color2 669900
-#orange
-color3 ff8800
-#red
-color4 cc0000
-#purple
-color5 9933cc
+--blue
+	color1 = '#0099cc',
+--green
+	color2 = '#669900',
+--orange
+	color3 = '#ff8800',
+--red
+	color4 = '#cc0000',
+--purple
+	color5 = '#9933cc',
+};
 
-TEXT
+conky.text = [[
 ${voffset 10}${cpugraph cpu1 40,140 0099cc 0099cc}${alignr}${cpugraph cpu5 40,140 0099cc 0099cc}
 ${voffset -65}${offset 15}${font DejaVu Sans Mono:size=20}${cpu cpu1}%${font}
 ${voffset -26}${offset 80}${font DejaVu Sans Mono:size=10}${hwmon 1 temp 2}°C${font}
@@ -158,3 +159,4 @@ ${fs_bar /media/mp5}
 ${endif}
 ${voffset -19}
 HDD Temperature: ${alignr}${color3}${hddtemp}°C${color}
+]];
