--- a/.gitmodules
+++ b/.gitmodules
@@ -3,12 +3,60 @@
 	ignore = untracked
 	path = liquidprompt
 	url = git@github.com:pkkolos/liquidprompt.git
-[submodule "urxvt-scripts"]
-	ignore = untracked
-	path = urxvt-scripts
-	url = git@github.com:pkkolos/urxvt-scripts.git
 [submodule "oh-my-git"]
 	branch = personal
 	ignore = untracked
 	path = oh-my-git
 	url = git@github.com:pkkolos/oh-my-git.git
+[submodule "urxvt-scripts"]
+	ignore = untracked
+	path = urxvt-scripts
+	url = git@github.com:pkkolos/urxvt-scripts.git
+[submodule "vim/abolish"]
+	path = vim/bundles/generic/abolish
+	url = https://github.com/tpope/vim-abolish.git
+[submodule "vim/base16"]
+	path = vim/bundles/themes/base16
+	url = https://github.com/chriskempson/base16-vim.git
+[submodule "vim/ctrlp"]
+	path = vim/bundles/other/ctrlp
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "vim/neocomplete"]
+	path = vim/bundles/other/neocomplete
+	url = https://github.com/Shougo/neocomplete.vim.git
+[submodule "vim/pathogen"]
+	path = vim/bundles/pathogen
+	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/python-mode"]
+	path = vim/bundles/other/python-mode
+	url = https://github.com/klen/python-mode.git
+[submodule "vim/ruby"]
+	path = vim/bundles/generic/ruby
+	url = https://github.com/vim-ruby/vim-ruby.git
+[submodule "vim/sneak"]
+	path = vim/bundles/generic/sneak
+	url = https://github.com/justinmk/vim-sneak.git
+[submodule "vim/snippets"]
+	path = vim/bundles/other/snippets
+	url = https://github.com/honza/vim-snippets.git
+[submodule "vim/solarized"]
+	path = vim/bundles/themes/solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "vim/surround"]
+	path = vim/bundles/other/surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule "vim/syntastic"]
+	path = vim/bundles/other/syntastic
+	url = https://github.com/scrooloose/syntastic.git
+[submodule "vim/tcomment"]
+	path = vim/bundles/generic/tcomment
+	url = https://github.com/tomtom/tcomment_vim.git
+[submodule "vim/ultisnips"]
+	path = vim/bundles/other/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
+[submodule "vim/undotree"]
+	path = vim/bundles/generic/undotree
+	url = https://github.com/mbbill/undotree.git
+[submodule "vim/yankstack"]
+	path = vim/bundles/generic/yankstack
+	url = https://github.com/maxbrunsfeld/vim-yankstack.git
