tmux: new version of tmux changed the mouse support

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,16 @@ set-option -g history-limit 4096
 set-option -g base-index 1
 set-option -g set-titles on
 set-option -g set-titles-string "#W"
-set-window-option -g mode-mouse copy-mode
+
+# mouse support
+set-option -g mouse on
+set-option -g mouse-utf8 off
+
+unbind-key -T root WheelUpPane
+unbind-key -T root WheelDownPane
+bind-key -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{pane_in_mode}" "send-keys -M" "copy-mode -u"'
+bind-key -temacs-copy WheelUpPane   halfpage-up
+bind-key -temacs-copy WheelDownPane halfpage-down
 
 # set prefix key to ctrl+a
 unbind-key C-b
