tmux: rearrange the numbers of windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ set-option -g history-limit 4096
 set-option -g base-index 1
 set-option -g set-titles on
 set-option -g set-titles-string "#W"
+set-option -g renumber-windows on
 
 # mouse support
 set-option -g mouse on
