--- a/ncmpcpp.config
+++ b/ncmpcpp.config
@@ -60,7 +60,7 @@ visualizer_in_stereo = yes
 ## Multiply received samples by given value. Very
 ## useful for proper visualization of quiet music.
 ##
-#visualizer_sample_multipler = 1
+#visualizer_sample_multiplier = 1
 
 ## Note: Below parameter defines how often ncmpcpp
 ## has to "synchronize" visualizer and audio outputs.
@@ -73,11 +73,33 @@ visualizer_in_stereo = yes
 ## Note: To enable spectrum frequency visualization
 ## you need to compile ncmpcpp with fftw3 support.
 ##
-## Available values: spectrum, wave.
+## Available values: spectrum, wave, wave_filled, ellipse.
 ##
 visualizer_type = spectrum
 
 #visualizer_look = ●▮
+
+visualizer_color = magenta
+
+## Alternative subset of 256 colors for terminals that support it.
+##
+#visualizer_color = 41, 83, 119, 155, 185, 215, 209, 203, 197, 161
+
+##### system encoding #####
+##
+## ncmpcpp should detect your charset encoding
+## but if it failed to do so, you can specify
+## charset encoding you are using here.
+##
+## Note: You can see whether your ncmpcpp build
+## supports charset detection by checking output
+## of `ncmpcpp --version`.
+##
+## Note: Since MPD uses UTF-8 by default, setting
+## this option makes sense only if your encoding
+## is different.
+##
+#system_encoding = ""
 
 ##### delays #####
 ##
@@ -92,7 +114,7 @@ visualizer_type = spectrum
 
 ##### song format #####
 ##
-## for song format you can use:
+## For a song format you can use:
 ##
 ## %l - length
 ## %f - filename
@@ -112,22 +134,21 @@ visualizer_type = spectrum
 ## %P - priority
 ## $R - begin right alignment
 ##
-## you can also put them in { } and then it will be displayed
-## only if all requested values are available and/or define alternate
-## value with { }|{ } eg. {%a - %t}|{%f}
+## If you want to make sure that a part of the format is displayed
+## only when certain tags are present, you can archieve it by
+## grouping them with brackets, e.g. '{%a - %t}' will be evaluated
+## to 'ARTIST - TITLE' if both tags are present or '' otherwise.
+## It is also possible to define a list of alternatives by providing
+## several groups and separating them with '|', e.g. '{%t}|{%f}'
+## will be evaluated to 'TITLE' or 'FILENAME' if the former is not
+## present.
 ##
 ## Note: If you want to set limit on maximal length of a tag, just
 ## put the appropriate number between % and character that defines
 ## tag type, e.g. to make album take max. 20 terminal cells, use '%20b'.
 ##
-## Note: Format that is similar to "%a - %t" (i.e. without any additional
-## braces) is equal to "{%a - %t}", so if one of the tags is missing,
-## you'll get nothing.
-##
-## text can also have different color than the main window has,
-## eg. if you want length to be green, write "$3%l$9".
-##
-## Available values:
+## In addition, formats support markers used for text attributes.
+## They are followed by character '$'. After that you can put:
 ##
 ## - 0 - default window color (discards all other colors)
 ## - 1 - black
@@ -139,6 +160,23 @@ visualizer_type = spectrum
 ## - 7 - cyan
 ## - 8 - white
 ## - 9 - end of current color
+## - b - bold text
+## - u - underline text
+## - r - reverse colors
+## - a - use alternative character set
+##
+## If you don't want to use a non-color attribute anymore, just put it
+## again, but this time insert character '/' between '$' and attribute
+## character, e.g. {$b%t$/b}|{$r%f$/r} will display bolded title tag
+## or filename with reversed colors.
+##
+## If you want to use 256 colors and/or background colors in formats
+## (the naming scheme is described below in section about color
+## definitions), it can be done with the syntax $(COLOR), e.g. to set
+## the artist tag to one of the non-standard colors and make it have
+## yellow background, you need to write $(197_yellow)%a$(end). Note
+## that for standard colors this is interchangable with attributes
+## listed above.
 ##
 ## Note: colors can be nested.
 ##
@@ -148,39 +186,10 @@ song_status_format = {{$5%a$8{ $2"%b"$8{ ($4%y$8)}} - $0}{%t}}|{%f}
 
 #song_library_format = {%n - }{%t}|{%f}
 
-#tag_editor_album_format = {(%y) }%b
-
-## Note: Below variables are used for sorting songs in browser.
-## The sort mode determines how songs are sorted, and can be used
-## in combination with a sort format to specify a custom sorting format.
-## Available values for browser_sort_mode are "name", "mtime", "format"
-## and "noop".
-##
-#browser_sort_mode = name
-
-#browser_sort_format = {%a - }{%t}|{%f} {(%l)}
-
-## Note: Below variables are for alternative version of user's interface.
-## Their syntax supports all tags and colors listed above plus some extra
-## markers used for text attributes. They are followed by character '$'.
-## After that you can put:
-##
-## - b - bold text
-## - u - underline text
-## - r - reverse colors
-## - a - use alternative character set
-##
-## If you don't want to use an attribute anymore, just put it again, but
-## this time insert character '/' between '$' and attribute character,
-## e.g. {$b%t$/b}|{$r%f$/r} will display bolded title tag or filename
-## with reversed colors.
-##
 alternative_header_first_line_format = $b$4{%t}|{%f}$9$/b
 
 alternative_header_second_line_format = {{$5$b%a$/b$9}{ - $2%b$9}{ ($4%y$9)}}|{%D}
 
-## Note: below variables also support text attributes listed above.
-##
 #now_playing_prefix = $b
 
 #now_playing_suffix = $/b
@@ -193,9 +202,19 @@ selected_item_suffix = $9$/b
 
 #modified_item_prefix = $3> $9
 
-## Note: colors are not supported for below variable.
+## Note: attributes are not supported for the following variables.
 ##
 #song_window_title_format = {%a - }{%t}|{%f}
+
+## Note: Below variables are used for sorting songs in browser.
+## The sort mode determines how songs are sorted, and can be used
+## in combination with a sort format to specify a custom sorting format.
+## Available values for browser_sort_mode are "name", "mtime", "format"
+## and "noop".
+##
+#browser_sort_mode = name
+
+#browser_sort_format = {%a - }{%t}|{%f} {(%l)}
 
 ##### columns settings #####
 ##
@@ -203,15 +222,16 @@ selected_item_suffix = $9$/b
 ##
 ## - syntax for each column is:
 ##
-## (width of column)[column's color]{displayed tag}
+## (width of the column)[color of the column]{displayed tag}
 ##
 ## Note: Width is by default in %, if you want a column to
 ## have fixed size, add 'f' after the value, e.g. (10)[white]{a}
-## will be the column that take 10% of screen (so the real column's
-## width will depend on actual screen size), whereas (10f)[white]{a}
+## will be the column that take 10% of screen (so the real width
+## will depend on actual screen size), whereas (10f)[white]{a}
 ## will take 10 terminal cells, no matter how wide the screen is.
 ##
-## - color is optional (if you want the default one, type [])
+## - color is optional (if you want the default one,
+##   leave the field empty).
 ##
 ## Note: You can give a column additional attributes by putting appropriate
 ## character after displayed tag character. Available attributes are:
@@ -235,6 +255,13 @@ selected_item_suffix = $9$/b
 song_columns_list_format = (20)[blue]{a} (30)[red]{b} (8f)[cyan]{NE} (50)[yellow]{t|f:Title} (7f)[green]{lr}
 
 ##### various settings #####
+##
+## Note: Custom command that will be executed each
+## time song changes. Useful for notifications etc.
+##
+#execute_on_song_change = ""
+
+#playlist_show_mpd_host = no
 
 playlist_show_remaining_time = yes
 
@@ -242,7 +269,7 @@ playlist_shorten_total_times = yes
 
 playlist_separate_albums = no
 
-## Possible display modes: classic, columns.
+## Note: Possible display modes: classic, columns.
 ##
 playlist_display_mode = columns
 
@@ -288,10 +315,6 @@ media_library_primary_tag = album_artist
 ## Available values: wrapped, normal.
 ##
 default_find_mode = wrapped
-
-## Available values: add, select.
-##
-default_space_mode = add
 
 #default_tag_editor_pattern = %n - %t
 
@@ -342,10 +365,18 @@ show_hidden_files_in_local_browser = no
 ##
 screen_switcher_mode = playlist,media_library
 
-## Note: You can define startup screen for ncmpcpp
+## Note: You can define startup screen
 ## by choosing screen from the list above.
 ##
 startup_screen = playlist
+
+## Note: You can define startup slave screen
+## by choosing screen from the list above or
+## an empty value for no slave screen.
+##
+#startup_slave_screen = ""
+
+#startup_slave_screen_focus = no
 
 ## Default width of locked screen (in %).
 ## Acceptable values are from 20 to 80.
@@ -366,7 +397,7 @@ display_bitrate = no
 
 display_remaining_time = yes
 
-## Available values: none, basic, extended.
+## Available values: none, basic, extended, perl.
 ##
 #regular_expressions = none
 
@@ -411,7 +442,24 @@ external_editor = vim
 use_console_editor = yes
 
 ##### colors definitions #####
-
+##
+## It is possible to set a background color by setting a color
+## value "<foreground>_<background>", e.g. red_black will set
+## foregound color to red and background color to black.
+##
+## In addition, for terminals that support 256 colors it
+## is possible to set one of them by using a number in range
+## [1, 256] instead of color name, e.g. numerical value
+## corresponding to red_black is 2_1. To find out if the
+## terminal supports 256 colors, run ncmpcpp and check out
+## the bottom of the help screen for list of available colors
+## and their numerical values.
+##
+## Note: due to technical limitations of ncurses, if 256 colors
+## are used, it is possible to either use only the colors with
+## default background color, or all pairs from 1_1 up to 254_127,
+## depending on the ncurses version used.
+##
 colors_enabled = yes
 
 #empty_tag_color = cyan
@@ -441,8 +489,6 @@ statusbar_color = yellow
 alternative_ui_separator_color = magenta
 
 #active_column_color = red
-
-visualizer_color = magenta
 
 window_border_color = blue
 
