--- a/offlineimap.config
+++ b/offlineimap.config
@@ -17,11 +17,13 @@ footer = "\n"
 localrepository = Gmail-Local
 remoterepository = Gmail-Remote
 status_backend = sqlite
+postsynchook = notmuch new
 
 [Account Outlook]
 localrepository = Outlook-Local
 remoterepository = Outlook-Remote
 status_backend = sqlite
+postsynchook = notmuch new
 
 [Repository Gmail-Local]
 type = Maildir
