mpDris2: new configuration file for version 0.7

--- a/mpDris2.conf
+++ b/mpDris2.conf
@@ -1,9 +1,12 @@
 [Connection]
-# host = localhost
-# port = 6600
-# password =
-# music_dir =
+#host = localhost
+#port = 6600
+#password =
+
+[Library]
+#music_dir =
+#cover_regex = ^(album|cover|\.?folder|front).*\.(gif|jpeg|jpg|png)$
 
 [Bling]
-# mmkeys = True
+#mmkeys = True
 notify = False
