use hidden directory for maildir

--- a/offlineimap.config
+++ b/offlineimap.config
@@ -27,12 +27,12 @@ postsynchook = notmuch new
 
 [Repository Gmail-Local]
 type = Maildir
-localfolders = ~/Mail/Gmail
+localfolders = ~/.mail/Gmail
 nametrans = lambda folder: nt_local(gmail_map, folder)
 
 [Repository Outlook-Local]
 type = Maildir
-localfolders = ~/Mail/Outlook
+localfolders = ~/.mail/Outlook
 nametrans = lambda folder: nt_local(outlook_map, folder)
 
 [Repository Gmail-Remote]
