--- a/conky.conf
+++ b/conky.conf
@@ -89,12 +89,12 @@ Battery: ${alignr}${color4}${battery BAT0}${if_match "${execi 300 cat /sys/class
 ACPI: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
 Updates: ${alignr -3}${color1}${texeci 300 aptitude search "~U" | wc -l}${color} 
 ${voffset -5}
-Gmail: ${alignr}${if_match ${new_mails $HOME/Mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
-${else}${if_match ${new_mails $HOME/Mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
-${else}${color3}${new_mails $HOME/Mail/Gmail/Inbox} new mails${color}${endif}${endif}
-Outlook: ${alignr}${if_match ${new_mails $HOME/Mail/Outlook/Inbox} == 0}${color2}No new mail${color}\
-${else}${if_match ${new_mails $HOME/Mail/Outlook/Inbox} == 1}${color3}1 new mail${color}\
-${else}${color3}${new_mails $HOME/Mail/Outlook/Inbox} new mails${color}${endif}${endif}
+Gmail: ${alignr}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
+${else}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
+${else}${color3}${new_mails $HOME/.mail/Gmail/Inbox} new mails${color}${endif}${endif}
+Outlook: ${alignr}${if_match ${new_mails $HOME/.mail/Outlook/Inbox} == 0}${color2}No new mail${color}\
+${else}${if_match ${new_mails $HOME/.mail/Outlook/Inbox} == 1}${color3}1 new mail${color}\
+${else}${color3}${new_mails $HOME/.mail/Outlook/Inbox} new mails${color}${endif}${endif}
 ${if_up enp4s0}
 ${voffset 20}${downspeedgraph enp4s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp4s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
