--- a/dirmngr.conf
+++ b/dirmngr.conf
@@ -1,6 +1,6 @@
 keyserver hkps://hkps.pool.sks-keyservers.net
-hkp-cacert /home/panayiotis/.gnupg/cacert.d/sks-keyservers.netCA.pem
-log-file /home/panayiotis/.gnupg/dirmngr.log
+hkp-cacert /home/panagiotis/.gnupg/cacert.d/sks-keyservers.netCA.pem
+log-file /home/panagiotis/.gnupg/dirmngr.log
 debug-level basic
 verbose
 verbose
