offlineimap: use TLS v1.2 with Gmail
Outlook does not support TLS above v1.0 yet

--- a/offlineimap.config
+++ b/offlineimap.config
@@ -42,8 +42,8 @@ remotepasseval = get_password("gmail")
 maxconnections = 3
 nametrans = lambda folder: nt_remote(gmail_map, folder)
 folderfilter = lambda folder: folder not in gmail_filter
-ssl_version = tls1
-tls_level = tls_no_ssl
+ssl_version = tls1_2
+tls_level = tls_secure
 auth_mechanisms = GSSAPI, CRAM-MD5, PLAIN, LOGIN
 sslcacertfile = /etc/ssl/certs/ca-certificates.crt
 
