offlineimap: move metadata to mail directory
now we can backup up just the mail directory

--- a/offlineimap.config
+++ b/offlineimap.config
@@ -2,7 +2,7 @@
 ui = ttyui
 accounts = Gmail,Outlook
 maxsyncaccounts = 2
-metadata = ~/.local/share/offlineimap
+metadata = ~/.mail/.offlineimap
 pythonfile = ~/.local/share/offlineimap/offlineimap.py
 
 [mbnames]
