tmux: use tmux-256color terminfo

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,9 @@
-#set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 set-option -g default-command "${SHELL}"
 set-option -g history-limit 4096
-set-option -g base-index 1
 set-option -g set-titles on
 set-option -g set-titles-string "#W"
+set-option -g base-index 1
 set-option -g renumber-windows on
 
 # mouse support
@@ -16,20 +16,17 @@ bind-key -temacs-copy WheelUpPane   halfpage-up
 bind-key -temacs-copy WheelDownPane halfpage-down
 
 # set prefix key to ctrl+a
-unbind-key C-b
 set-option -g prefix C-a
 
-# send the prefix to client inside window
-bind-key a send-prefix
-
-# toggle last window like screen
-bind-key C-a last-window
+unbind-key C-b
+bind-key a send-prefix    # send the prefix through to the application
+bind-key C-a last-window  # toggle last window
 
 # switch split window keys
 unbind-key %
 unbind-key '"'
 bind-key | split-window -h
-bind-key - split-window -v
+bind-key - split-window -v  # was delete-buffer
 
 # status format
 set-option -g status-interval 1
