tmux: use C-a for passing prefix through & a for switch to last window

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,8 +19,8 @@ bind-key -temacs-copy WheelDownPane halfpage-down
 set-option -g prefix C-a
 
 unbind-key C-b
-bind-key a send-prefix    # send the prefix through to the application
-bind-key C-a last-window  # toggle last window
+bind-key C-a send-prefix  # send the prefix through to the application
+bind-key a last-window    # toggle last window
 
 # switch split window keys
 unbind-key %
