--- a/tmux.conf
+++ b/tmux.conf
@@ -9,9 +9,8 @@ set-option -g renumber-windows on
 # mouse support
 set-option -g mouse on
 
-unbind-key -T root WheelUpPane
-unbind-key -T root WheelDownPane
-bind-key -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{pane_in_mode}" "send-keys -M" "copy-mode -u"'
+bind-key -n WheelUpPane   if -Ft= "#{?mouse_any_flag,1,#{?alternate_on,1,#{pane_in_mode}}}" "select-pane -t=; send-keys -M" "select-pane -t=; copy-mode -e; send-keys -M"
+bind-key -n WheelDownPane select-pane -t= \; send-keys -M
 bind-key -temacs-copy WheelUpPane   halfpage-up
 bind-key -temacs-copy WheelDownPane halfpage-down
 
