tmux: make config file a little less verbose

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,43 +1,43 @@
-set-option -g default-terminal "tmux-256color"
-set-option -g default-command "${SHELL}"
-set-option -g history-limit 4096
-set-option -g set-titles on
-set-option -g set-titles-string "#W"
-set-option -g base-index 1
-set-option -g renumber-windows on
+set -g default-terminal "tmux-256color"
+set -g default-command "${SHELL}"
+set -g history-limit 4096
+set -g set-titles on
+set -g set-titles-string "#W"
+set -g base-index 1
+set -g renumber-windows on
 
 # mouse support
-set-option -g mouse on
+set -g mouse on
 
-bind-key -n WheelUpPane   if -Ft= "#{?mouse_any_flag,1,#{?alternate_on,1,#{pane_in_mode}}}" "select-pane -t=; send-keys -M" "select-pane -t=; copy-mode -e; send-keys -M"
-bind-key -n WheelDownPane select-pane -t= \; send-keys -M
-bind-key -temacs-copy WheelUpPane   halfpage-up
-bind-key -temacs-copy WheelDownPane halfpage-down
+bind -n WheelUpPane   if -Ft= "#{?mouse_any_flag,1,#{?alternate_on,1,#{pane_in_mode}}}" "select-pane -t=; send-keys -M" "select-pane -t=; copy-mode -e; send-keys -M"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -t emacs-copy WheelUpPane   halfpage-up
+bind -t emacs-copy WheelDownPane halfpage-down
 
 # set prefix key to ctrl+a
-set-option -g prefix C-a
+set -g prefix C-a
 
-unbind-key C-b
-bind-key C-a send-prefix  # send the prefix through to the application
-bind-key a last-window    # toggle last window
+unbind C-b
+bind C-a send-prefix  # send the prefix through to the application
+bind a last-window    # toggle last window
 
 # switch split window keys
-unbind-key %
-unbind-key '"'
-bind-key | split-window -h
-bind-key - split-window -v  # was delete-buffer
+unbind %
+unbind '"'
+bind | split-window -h
+bind - split-window -v  # was delete-buffer
 
 # status format
-set-option -g status-interval 1
-set-option -g status-style bg=brightgreen,fg=default
-set-option -g status-left-length 0
-set-option -g status-right " #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow]%Y-%m-%d %H:%M"
-set-option -g status-right-length 33
-set-option -g status-right-style bg=brightgreen,fg=green
+set -g status-interval 1
+set -g status-style bg=brightgreen,fg=default
+set -g status-left-length 0
+set -g status-right " #(cut /proc/loadavg -d ' ' -f 1-3) #[fg=yellow]%Y-%m-%d %H:%M"
+set -g status-right-length 33
+set -g status-right-style bg=brightgreen,fg=green
 
-set-window-option -g window-status-format "#I #W"
-set-window-option -g window-status-style bg=brightgreen
-set-window-option -g window-status-current-format " #I #F "
-set-window-option -g window-status-current-style bg=black,fg=red,bold
+set -gw window-status-format "#I #W"
+set -gw window-status-style bg=brightgreen
+set -gw window-status-current-format " #I #F "
+set -gw window-status-current-style bg=black,fg=red,bold
 
 # vim: ft=conf:
