--- a/tmux.conf
+++ b/tmux.conf
@@ -5,14 +5,15 @@ set -g set-titles on
 set -g set-titles-string "#W"
 set -g base-index 1
 set -g renumber-windows on
+set -gw mode-keys vi
 
 # mouse support
 set -g mouse on
 
 bind -n WheelUpPane   if -Ft= "#{?mouse_any_flag,1,#{?alternate_on,1,#{pane_in_mode}}}" "select-pane -t=; send-keys -M" "select-pane -t=; copy-mode -e; send-keys -M"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -t emacs-copy WheelUpPane   halfpage-up
-bind -t emacs-copy WheelDownPane halfpage-down
+bind -t vi-copy WheelUpPane   halfpage-up
+bind -t vi-copy WheelDownPane halfpage-down
 
 # set prefix key to ctrl+a
 set -g prefix C-a
