--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "tmux-256color"
+set -g terminal-overrides "xterm-256color:Tc"
 set -g default-command "${SHELL}"
 set -g history-limit 4096
 set -g set-titles on
