--- a/.gitmodules
+++ b/.gitmodules
@@ -13,56 +13,74 @@
 	path = urxvt-scripts
 	url = git@github.com:pkkolos/urxvt-scripts.git
 [submodule "vim/abolish"]
+	shallow = true
 	path = vim/bundles/generic/abolish
 	url = https://github.com/tpope/vim-abolish.git
 [submodule "vim/base16"]
+	shallow = true
 	path = vim/bundles/themes/base16
 	url = https://github.com/chriskempson/base16-vim.git
 [submodule "vim/ctrlp"]
+	shallow = true
 	path = vim/bundles/other/ctrlp
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "vim/neocomplete"]
+	shallow = true
 	path = vim/bundles/other/neocomplete
 	url = https://github.com/Shougo/neocomplete.vim.git
 [submodule "vim/pathogen"]
+	shallow = true
 	path = vim/bundles/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
 [submodule "vim/ruby"]
+	shallow = true
 	path = vim/bundles/programming/ruby
 	url = https://github.com/vim-ruby/vim-ruby.git
 [submodule "vim/sneak"]
+	shallow = true
 	path = vim/bundles/generic/sneak
 	url = https://github.com/justinmk/vim-sneak.git
 [submodule "vim/snippets"]
+	shallow = true
 	path = vim/bundles/programming/snippets
 	url = https://github.com/honza/vim-snippets.git
 [submodule "vim/solarized"]
+	shallow = true
 	path = vim/bundles/themes/solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
 [submodule "vim/surround"]
+	shallow = true
 	path = vim/bundles/other/surround
 	url = https://github.com/tpope/vim-surround.git
 [submodule "vim/syntastic"]
+	shallow = true
 	path = vim/bundles/programming/syntastic
 	url = https://github.com/scrooloose/syntastic.git
 [submodule "vim/tcomment"]
+	shallow = true
 	path = vim/bundles/generic/tcomment
 	url = https://github.com/tomtom/tcomment_vim.git
 [submodule "vim/ultisnips"]
+	shallow = true
 	path = vim/bundles/programming/ultisnips
 	url = https://github.com/SirVer/ultisnips.git
 [submodule "vim/undotree"]
+	shallow = true
 	path = vim/bundles/generic/undotree
 	url = https://github.com/mbbill/undotree.git
 [submodule "vim/yankstack"]
+	shallow = true
 	path = vim/bundles/generic/yankstack
 	url = https://github.com/maxbrunsfeld/vim-yankstack.git
 [submodule "vim/rust"]
+	shallow = true
 	path = vim/bundles/programming/rust
 	url = https://github.com/rust-lang/rust.vim.git
 [submodule "vim/fastfold"]
+	shallow = true
 	path = vim/bundles/other/fastfold
 	url = https://github.com/Konfekt/FastFold
 [submodule "vim/latex"]
+	shallow = true
 	path = vim/bundles/other/latex
 	url = https://github.com/vim-latex/vim-latex.git
