gbp: create orig file if not exist and commit to pristine-tar branch

--- a/gbp.conf
+++ b/gbp.conf
@@ -1,15 +1,17 @@
 [DEFAULT]
-# builder = git-pbuilder
-cleaner = fakeroot debian/rules clean
-pristine-tar = True
+pristine-tar = true
+upstream-tag = %(version)s
 
 [buildpackage]
+builder = debuild -us -uc -I -i
+cleaner = fakeroot debian/rules clean
+compression = xz
 export-dir = ../build-area/
-#tarball-dir = ../tarballs/
+pristine-tar-commit = true
 
 [import-orig]
-dch = False
-symlink-orig = False
+dch = false
+symlink-orig = false
 
 [pq]
-patch-numbers = False
+patch-numbers = false
