--- a/gtk3/settings.ini
+++ b/gtk3/settings.ini
@@ -14,3 +14,5 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=0
