bspwm: lemonbuddy renamed to polybar

--- a/polybar.config
+++ b/polybar.config
@@ -10,7 +10,7 @@ status_d = #5c616c
 
 
 [bar/panel]
-monitor = eDP-1
+monitor = ${env:MONITOR:eDP-1}
 dock = true
 
 width = 100%
@@ -27,14 +27,14 @@ padding-right = 1
 module-margin-left = 0
 module-margin-right = 0
 
-lineheight = 2
+underline-size = 2
 
 font-0 = NotoMono:size=10;0
 font-1 = FontAwesome:size=10;0
 
 modules-left = bspwm mpd
 modules-center =
-modules-right = wlan volume battery date clock powermenu
+modules-right = xwindow wlan volume battery date clock powermenu
 
 tray-position = right
 tray-padding = 0
@@ -98,11 +98,15 @@ icon-play = 
 icon-pause = 
 icon-next = 
 
-icon-random = 
-icon-repeat = 
 
-toggle-on-foreground = #e60053
-toggle-off-foreground = #66
+[module/xwindow]
+type = internal/xwindow
+
+format-foreground = ${colours.status_l}
+format-margin = 2
+
+label = %title%
+label-maxlen = 50
 
 
 [module/wlan]
