polybar: simplify config now that the color drawing bug was fixed

--- a/polybar.config
+++ b/polybar.config
@@ -60,8 +60,10 @@ ws-icon-default = 
 format = <label-monitor> <label-state>
 format-margin = 1
 
-label-monitor = %{B#1f62b0} %name% %{B#191b21}
+label-monitor = %name%
 label-monitor-foreground = ${colours.bg}
+label-monitor-background = ${colours.active_ul}
+label-monitor-padding = 1
 
 label-active = %icon%
 label-active-background = ${colours.active_bg}
