polybar: show bspwm window mode (only monocle mode for now)

--- a/polybar.config
+++ b/polybar.config
@@ -57,7 +57,7 @@ ws-icon-8 = chat;
 ws-icon-9 = music;
 ws-icon-default = 
 
-format = <label-monitor> <label-state>
+format = <label-monitor> <label-state> <label-mode>
 format-margin = 1
 
 label-monitor = %name%
@@ -80,6 +80,9 @@ label-urgent-padding = 1
 label-empty = %icon%
 label-empty-foreground = ${colours.empty_fg}
 label-empty-padding = 1
+
+label-monocle = 
+label-monocle-foreground = ${colours.active_ul}
 
 
 [module/mpd]
