--- a/polybar.config
+++ b/polybar.config
@@ -11,7 +11,7 @@ status_d = #5c616c
 
 [bar/panel]
 monitor = ${env:MONITOR:eDP-1}
-dock = true
+override_redirect = true
 
 width = 100%
 height = 32
@@ -65,10 +65,10 @@ label-monitor-foreground = ${colours.bg}
 label-monitor-background = ${colours.active_ul}
 label-monitor-padding = 1
 
-label-active = %icon%
-label-active-background = ${colours.active_bg}
-label-active-underline = ${colours.active_ul}
-label-active-padding = 1
+label-focused = %icon%
+label-focused-background = ${colours.active_bg}
+label-focused-underline = ${colours.active_ul}
+label-focused-padding = 1
 
 label-occupied = %icon%
 label-occupied-padding = 1
