polybar: use prefix options so we can use colour variables

--- a/polybar.config
+++ b/polybar.config
@@ -121,12 +121,14 @@ interval = 10
 
 format-connected = <label-connected>
 format-connected-margin = 1
+format-connected-prefix = " "
+format-connected-prefix-foreground = ${colours.status_d}
 
 format-disconnected-margin = 1
 
-label-connected = %{F#5c616c} %{F#d3dae3}%essid%
+label-connected = %essid%
 
-label-disconnected = 
+label-disconnected = " "
 label-disconnected-foreground = ${colours.status_d}
 
 
@@ -182,8 +184,12 @@ type = internal/date
 interval = 5
 
 format-margin = 1
+format-prefix = " "
+format-prefix-foreground = ${colours.status_d}
 
-date = %%{F#5c616c} %%{F#d3dae3}%a, %b %d
+label = %date%
+
+date = %a, %b %d
 
 
 [module/clock]
@@ -191,8 +197,12 @@ type = internal/date
 interval = 5
 
 format-margin = 1
+format-prefix = " "
+format-prefix-foreground = ${colours.status_d}
 
-date = %%{F#5c616c} %%{F#d3dae3}%R %Z
+label = %time%
+
+time = %R %Z
 
 
 [module/powermenu]
