polybar: use right margin only in xwindow module

--- a/polybar.config
+++ b/polybar.config
@@ -108,10 +108,10 @@ icon-next = 
 type = internal/xwindow
 
 format-foreground = ${colours.status_l}
-format-margin = 2
 
 label = %title%
 label-maxlen = 50
+label-margin-right = 2
 
 
 [module/wlan]
