conky: tidy up config files

--- a/conky.conf
+++ b/conky.conf
@@ -85,9 +85,7 @@ ${voffset -1}${color1}${top_mem name 4}
 ${voffset -15}${offset 150}${top_mem pid 4}${alignr}${top_mem mem 4}%${color}
 ${voffset 10}
 Uptime: ${alignr}${color1}${uptime}${color}
-Battery: ${alignr}${color4}${battery BAT0}${if_match "${execi 300 cat /sys/class/power_supply/BAT0/power_now}" != "0"} (${battery_time BAT0})${endif}${color}
-ACPI: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
-Updates: ${alignr -3}${color1}${texeci 300 aptitude search "~U" | wc -l}${color} 
+ACPI Temperature: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
 ${voffset -5}
 Gmail: ${alignr}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
 ${else}${if_match ${new_mails $HOME/.mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
@@ -121,10 +119,6 @@ ${if_mounted /boot}/boot
 ${voffset -15}${offset 100}${color3}${fs_used /boot}${color} / ${fs_size /boot}${alignr}${fs_used_perc /boot}%
 ${fs_bar /boot}
 ${endif}\
-${if_mounted /home}/home
-${voffset -15}${offset 100}${color3}${fs_used /home}${color} / ${fs_size /home}${alignr}${fs_used_perc /home}%
-${fs_bar /home}
-${endif}\
 ${if_mounted /media/lacie25}/media/lacie25
 ${voffset -15}${offset 100}${color3}${fs_used /media/lacie25}${color} / ${fs_size /media/lacie25}${alignr}${fs_used_perc /media/lacie25}%
 ${fs_bar /media/lacie25}
@@ -144,18 +138,6 @@ ${endif}\
 ${if_mounted /media/mp2}/media/mp2
 ${voffset -15}${offset 100}${color3}${fs_used /media/mp2}${color} / ${fs_size /media/mp2}${alignr}${fs_used_perc /media/mp2}%
 ${fs_bar /media/mp2}
-${endif}\
-${if_mounted /media/mp3}/media/mp3
-${voffset -15}${offset 100}${color3}${fs_used /media/mp3}${color} / ${fs_size /media/mp3}${alignr}${fs_used_perc /media/mp3}%
-${fs_bar /media/mp3}
-${endif}\
-${if_mounted /media/mp4}/media/mp4
-${voffset -15}${offset 100}${color3}${fs_used /media/mp4}${color} / ${fs_size /media/mp4}${alignr}${fs_used_perc /media/mp4}%
-${fs_bar /media/mp4}
-${endif}\
-${if_mounted /media/mp5}/media/mp5
-${voffset -15}${offset 100}${color3}${fs_used /media/mp5}${color} / ${fs_size /media/mp5}${alignr}${fs_used_perc /media/mp5}%
-${fs_bar /media/mp5}
 ${endif}
 ${voffset -19}
 HDD Temperature: ${alignr}${color3}${hddtemp}°C${color}
