--- a/host-osilon/conky.conf
+++ b/host-osilon/conky.conf
@@ -71,16 +71,7 @@ ${voffset -1}${color1}${top_mem name 4}
 ${voffset -15}${offset 150}${top_mem pid 4}${alignr}${top_mem mem 4}%${color}
 ${voffset 10}
 Uptime: ${alignr}${color1}${uptime}${color}
-Battery: ${alignr}${color4}${battery BAT1}${if_match "${battery_short BAT1}" != "F"} (${battery_time BAT1})${endif}${color}
-ACPI: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
-Updates: ${alignr -3}${color1}${texeci 300 aptitude search "~U" | wc -l}${color} 
-${voffset -5}
-Gmail: ${alignr}${if_match ${new_mails $HOME/Mail/Gmail/Inbox} == 0}${color2}No new mail${color}\
-${else}${if_match ${new_mails $HOME/Mail/Gmail/Inbox} == 1}${color3}1 new mail${color}\
-${else}${color3}${new_mails $HOME/Mail/Gmail/Inbox} new mails${color}${endif}${endif}
-Outlook: ${alignr}${if_match ${new_mails $HOME/Mail/Outlook/Inbox} == 0}${color2}No new mail${color}\
-${else}${if_match ${new_mails $HOME/Mail/Outlook/Inbox} == 1}${color3}1 new mail${color}\
-${else}${color3}${new_mails $HOME/Mail/Outlook/Inbox} new mails${color}${endif}${endif}
+ACPI Temperature: ${alignr}${color3}${hwmon 0 temp 1}°C${color}
 ${if_up enp3s0}
 ${voffset 20}${downspeedgraph enp3s0 35,140 ff8800 ff8800}${alignr}${upspeedgraph enp3s0 35,140 669900 669900}
 ${voffset -62}${offset 5}${font DejaVu Sans Mono:size=10}${color3}In${color}${font}
@@ -138,10 +129,6 @@ ${endif}\
 ${if_mounted /media/mp4}/media/mp4
 ${voffset -15}${offset 100}${color3}${fs_used /media/mp4}${color} / ${fs_size /media/mp4}${alignr}${fs_used_perc /media/mp4}%
 ${fs_bar /media/mp4}
-${endif}\
-${if_mounted /media/mp5}/media/mp5
-${voffset -15}${offset 100}${color3}${fs_used /media/mp5}${color} / ${fs_size /media/mp5}${alignr}${fs_used_perc /media/mp5}%
-${fs_bar /media/mp5}
 ${endif}
 ${voffset -19}
 HDD Temperature: ${alignr}${color3}${hddtemp}°C${color}
