polybar: add keyboard indicator

--- a/polybar.config
+++ b/polybar.config
@@ -34,7 +34,7 @@ font-1 = FontAwesome:size=10;0
 
 modules-left = bspwm mpd
 modules-center =
-modules-right = xwindow wlan volume battery date clock powermenu
+modules-right = xwindow wlan keyboard volume battery date clock powermenu
 
 tray-position = right
 tray-padding = 0
@@ -131,6 +131,18 @@ label-connected-foreground = ${colours.fg_alt}
 
 label-disconnected = " "
 label-disconnected-foreground = ${colours.status_icon}
+
+
+[module/keyboard]
+type = internal/xkeyboard
+
+format = <label-layout>
+format-margin = 1
+format-prefix = " "
+format-prefix-foreground = ${colours.status_icon}
+
+label-layout = %layout%
+label-layout-foreground = ${colours.fg_alt}
 
 
 [module/volume]
