conky: add new mount point

--- a/conky.conf
+++ b/conky.conf
@@ -127,6 +127,10 @@ ${if_mounted /media/lacie35}/media/lacie35
 ${voffset -15}${offset 100}${color3}${fs_used /media/lacie35}${color} / ${fs_size /media/lacie35}${alignr}${fs_used_perc /media/lacie35}%
 ${fs_bar /media/lacie35}
 ${endif}\
+${if_mounted /media/toshiba}/media/toshiba
+${voffset -15}${offset 100}${color3}${fs_used /media/toshiba}${color} / ${fs_size /media/toshiba}${alignr}${fs_used_perc /media/toshiba}%
+${fs_bar /media/toshiba}
+${endif}\
 ${if_mounted /media/wdultra}/media/wdultra
 ${voffset -15}${offset 100}${color3}${fs_used /media/wdultra}${color} / ${fs_size /media/wdultra}${alignr}${fs_used_perc /media/wdultra}%
 ${fs_bar /media/wdultra}
