gtk3: add modules

--- a/gtk3/settings.ini
+++ b/gtk3/settings.ini
@@ -16,3 +16,4 @@ gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
+gtk-modules=canberra-gtk-module
