polybar: show percentage sign on volume module

--- a/polybar.config
+++ b/polybar.config
@@ -155,7 +155,7 @@ format-volume-margin = 1
 
 format-muted-margin = 1
 
-label-volume = %percentage%
+label-volume = %percentage%%
 label-volume-foreground = ${colours.fg_alt}
 
 label-muted = 
