fontconfig: use EmojiOne as fallback after Noto Serif & Noto Sans

--- a/fonts.conf
+++ b/fonts.conf
@@ -22,28 +22,28 @@
         <family>serif</family>
         <prefer>
             <family>Noto Serif</family>
+            <family>EmojiOne Color</family>
         </prefer>
         <default>
-            <family>emoji</family>
+            <family>DejaVu Serif</family>
         </default>
     </alias>
     <alias>
         <family>sans-serif</family>
         <prefer>
             <family>Noto Sans</family>
+            <family>EmojiOne Color</family>
         </prefer>
         <default>
-            <family>emoji</family>
+            <family>DejaVu Sans</family>
         </default>
     </alias>
     <alias>
         <family>monospace</family>
         <prefer>
+            <family>DejaVu Sans Mono</family>
             <family>Noto Mono</family>
         </prefer>
-        <default>
-            <family>emoji</family>
-        </default>
     </alias>
 
 </fontconfig>
