conky: use DejaVu Sans; Droid Sans doesn't exist on the system anymore

--- a/conky.conf
+++ b/conky.conf
@@ -23,7 +23,7 @@ conky.config = {
 	draw_graph_borders = false,
 
 	use_xft = true,
-	font = 'Droid Sans:size=10',
+	font = 'DejaVu Sans:size=10',
 
 	default_color = '#111111',
 
