--- a/host-osilon/conky.conf
+++ b/host-osilon/conky.conf
@@ -23,7 +23,7 @@ conky.config = {
 	draw_graph_borders = false,
 
 	use_xft = true,
-	font = 'Droid Sans:size=10',
+	font = 'DejaVu Sans:size=10',
 
 	default_color = '#111111',
 
