compton: change some settings to fix some glitches

--- a/compton.conf
+++ b/compton.conf
@@ -1,2 +1,7 @@
-backend="glx";
-vsync="none";
+backend = "glx";
+vsync = "opengl-swc";
+paint-on-overlay = true;
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+glx-swap-method = "buffer-age";
+xrender-sync-fence = true;
