i3status: fix the wireless, ethernet, and temperature indicators

--- a/i3status.config
+++ b/i3status.config
@@ -12,8 +12,8 @@ general {
 }
 
 order += "volume master"
-order += "ethernet eth0"
-order += "wireless wlan0"
+order += "ethernet enp5s0"
+order += "wireless wlp7s0"
 order += "disk /"
 order += "disk /home"
 order += "cpu_usage"
@@ -22,12 +22,12 @@ order += "load"
 order += "battery 1"
 order += "time"
 
-wireless wlan0 {
+wireless wlp7s0 {
     format_up = " %bitrate(%quality)  %essid"
     format_down = ""
 }
 
-ethernet eth0 {
+ethernet enp5s0 {
     format_up = " %ip"
     format_down = ""
 }
@@ -50,7 +50,7 @@ cpu_usage {
 
 cpu_temperature 0 {
     format = "%degrees°C"
-    path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp2_input"
+    path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp2_input"
 }
 
 load {
