i3: tidy up the config file

--- a/i3.config
+++ b/i3.config
@@ -130,13 +130,13 @@ bindsym $mod+Shift+q mode "$mode_system"
 
 # app bindings
 bindsym $mod+Return exec xterm
-bindsym $mod+d exec dmenu_run -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'
-bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -h 19 -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'"
+bindsym $mod+d exec dmenu_run -i -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'
+bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -p 'Search:' -nb '$black' -nf '$white' -sb '$blue' -sf '$white' -fn 'DejaVu Sans Mono-9:normal'"
 bindsym $mod+r exec urxvt -name ranger -e ranger
 
 exec urxvt -name ranger -e ranger
 
-assign [class="(?i)iceweasel"] $ws5
+assign [class="(?i)firefox"]   $ws5
 assign [instance="(?i)ranger"] $ws6
 assign [class="(?i)nautilus"]  $ws6
 assign [class="(?i)mpv"]       $ws7
@@ -156,12 +156,6 @@ bar {
     strip_workspace_numbers yes
     status_command i3status
 }
-
-# ALSA bindings for volume keys
-#bindsym XF86AudioMute exec --no-startup-id amixer -q set Master toggle && killall -SIGUSR1 i3status
-#bindsym $mod+XF86AudioMute exec --no-startup-id amixer -q set Master 0% mute && killall -SIGUSR1 i3status
-#bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q set Master 2%- unmute && killall -SIGUSR1 i3status
-#bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q set Master 2%+ unmute && killall -SIGUSR1 i3status
 
 # PulseAudio bindings for volume keys
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle && killall -SIGUSR1 i3status
